 name:               holbert
version:             0.2.0.0
synopsis:            An interactive proof assistant
category:            Web
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  other-modules: 
    StringRep 
    Prop 
    ProofTree 
    Terms 
    Unification
    Editor
    Rule
    Heading
    Paragraph
    Controller
    Item
    ImportExport
    View.Editor
    View.Term
    View.Utils
    View.ProofTree
    View.Prop
    View.Paragraph
    View.Heading
    View.Rule
    View.Item
  ghcjs-options:
    -dedupe
  build-depends:       base, ghcjs-base, aeson, miso, mtl, containers, optics-core
  default-language:    Haskell2010 
