 name:               holbert
version:             0.5.1.0
synopsis:            An interactive proof assistant
category:            Web
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

flag mixfix
  description: Enable mixfix operator
  default:     False

executable app
  --if flag(mixfix)
  --  cpp-options: -DMIXFIX
  main-is:             Main.hs
  other-modules: 
    StringRep 
    Prop 
    ProofTree 
    Terms 
    Unification
    Editor
    Rule
    Heading
    SyntaxDecl
    Paragraph
    Controller
    Item
    DisplayOptions
    ImportExport
    View.Editor
    View.Term
    View.Utils
    View.ProofTree
    View.Prop
    View.Paragraph
    View.Heading
    View.SyntaxDecl
    View.Rule
    View.Item
  ghcjs-options:
    -dedupe
  build-depends:       base, ghcjs-base, aeson, text, miso, mtl, containers, optics-core, Earley
  default-language:    Haskell2010 
