 name:               holbert
version:             0.5.1.0
synopsis:            An interactive proof assistant
category:            Web
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

flag mixfix
  description: Enable mixfix operator
  default:     False

executable app
  --if flag(mixfix)
  --  cpp-options: -DMIXFIX
  main-is:             Main.hs
  other-modules: 
    StringRep 
    Prop 
    ProofTree 
    Terms 
    Unification
    Editor
    Rule
    Heading
    SyntaxDecl
    Paragraph
    Controller
    Item
    DisplayOptions
    ImportExport
    View.Editor
    View.Term
    View.Utils
    View.ProofTree
    View.Prop
    View.Paragraph
    View.Heading
    View.SyntaxDecl
    View.Rule
    View.Item
  ghcjs-options:
    -dedupe
  build-depends:       base, ghcjs-base == 0.2.1.0, aeson, hashable==1.3.5.0, text, miso, mtl, containers==0.6.8, optics-core, Earley, jsaddle == 0.9.8.2, unordered-containers==0.2.19.1
  default-language:    Haskell2010 
